--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -231,6 +231,22 @@ a:hover {
   transition: all 500ms ease;
 }
 
+.about_me_container ul li {
+  display: inline-block;
+}
+
+.about_me_container .logo{
+  height: 80px;
+  width: 80px;
+  font-size: 2rem;
+  border-radius: 50%;
+  line-height: 1.6;
+  margin: 0 15px 0 0;
+  /* box-shadow: 0 0 0 3px #0078ff; */
+  transition: all 500ms ease;
+}
+
+
 .socials .ico-circle:hover {
   background-color: #0078ff;
   color: #fff;
