--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1497,3 +1497,16 @@ footer .credits {
 footer .credits a {
   color: #fff;
 }
+
+.skill_img{
+  width:15%;
+  overflow: hidden;
+  /* height:50%; */
+}
+
+.service-box{
+  height: 70%;
+}
+
+
+
